test/types/file/bradc/changePathWhileOpen.good
changePathWhileOpen.chpl:4: error: halt reached - Cannot change path of file ./f.out while it is open
